HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportRawContext/Expected.uv
//! Expected diagnostic metadata for the HostExportRawContext rejected-source specimen.

expectedDiagnostic("E-TYP-2636", "rule.23.HostExport-Context-Raw-Err")
